# ip_traffic_monitor_cli

./: .gitignore  AGENTS.md  Cargo.toml  MIGRATION.md  README.md  deploy.sh  test.sh
docs/: 20251208_EXAMPLE.md  20251209_cpu_optimization_report.md  20251209_cpu_optimization_summary.md  20251209_performance_analysis.md  20251209_quick_optimization.md  20251230_TRAFFIC_DIRECTION.md  GEOIP_SETUP.md  MEMORY_OPTIMIZATION.md  USAGE.md  diesel-quick-reference.md  diesel-setup-guide.md
grafana/: grafana.json
migrations/2025-11-06-063509-0000_create_ip_traffic_table/: down.sql  up.sql
migrations/2025-12-08-075210-0000_convert_rate_to_bytes/: down.sql  up.sql
src/: bpftrace_monitor.rs  iftop_monitor.rs  main.rs  monitor.rs  schema.rs
