[package]
name = "ip_traffic_monitor_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1", features = ["sqlite", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
byteorder = "1.5.0"
hex = "0.4.3"
procfs = "0.16.0"
diesel_migrations = "2.1"
clap = { version = "4.4", features = ["derive"] }  # 命令行参数解析