[package]
name = "ip_traffic_monitor_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
hex = "0.4.3"
procfs = "0.16.0"
clap = { version = "4.4", features = ["derive"] }  # 命令行参数解析
actix-web = { version = "4.4", features = ["compress-gzip", "compress-zstd"] }  # Web 框架用于 Prometheus exporter
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }  # 异步运行时
maxminddb = "0.24"  # GeoIP2 数据库读取
once_cell = "1.19"  # 用于懒加载 IP 数据库
ctrlc = "3.4"  # Ctrl+C 信号处理
libc = "0.2"  # 用于权限检查